Update a bit